adicionei conexão conectionWorkin

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=BancoFinanblue;User Id=sa;Password=123456;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=BancoFinanblue;User Id=sa;Password=123456;TrustServerCertificate=True;",
+    "ConnectionWork": "Server=localhost;Database=BancoFinanblue;User Id=sa;Password=gestor@2004;TrustServerCertificate=True;"
+
   },
   "Logging": {
     "LogLevel": {
